Добавлена валидация пользователей

--- a/public/sass/main.sass
+++ b/public/sass/main.sass
@@ -19,21 +19,11 @@ ul
     color: $red
 .rating
   font-weight: bold
-input[type=file]
-  width: 1px
-  height: 1px
 #upload
   display: none
   margin-bottom: 25px
   input,textarea
     margin-bottom: 10px
-  .attach
-    text-align: left
-  input[type=file]
-    display: inline-block
-  span
-    vertical-align: top
-    margin-right: 10px
   button
     background-color: $bgc
 #addwork
@@ -56,6 +46,26 @@ input[type=file]
 .modal
   i
     margin-right: 10px
+#register, #authorize
+  width: 400px
+  margin: auto
+  margin-bottom: 20px
+  input
+    margin-top: 10px
+  p
+    text-align: center
+    text-transform: uppercase
+  button
+    width: 180px
+    margin-top: 10px
+.valid_mes
+  color: $error
+  float: right
+  font-size: 12px
+  margin-bottom: 5px
+.valid_notification
+  color: $error
+
 
   
 
