--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,6 +5,7 @@ html(lang="en",ng-app="app")
         link(rel="stylesheet",href="/libs/bootstrap/bootstrap.css")
         link(rel="stylesheet",href="/css/font-awesome.css")
         link(rel="stylesheet",href="/css/fonts.css")
+        link(rel="stylesheet",href="/css/main.css")
         block additional_styles
     body
         block content
@@ -12,4 +13,5 @@ html(lang="en",ng-app="app")
             script(src="/libs/jquery/dist/jquery.min.js")
             script(src="/libs/bootstrap/bootstrap.js")
             script(src="/libs/angular/angular.js")
+            script(src="/js/config.js")
         block additional_scripts
