--- a/public/sass/main.sass
+++ b/public/sass/main.sass
@@ -65,7 +65,10 @@ ul
   margin-bottom: 5px
 .valid_notification
   color: $error
-
+.customer_menu
+  li
+    display: inline-block
+    margin-right: 25px
 
   
 
