--- a/views/includes/navbar.jade
+++ b/views/includes/navbar.jade
@@ -4,7 +4,10 @@ nav.navbar.navbar-default.navbar-fixed-top
             a FF
         a(href="/task/get").btn.btn-success.navbar-btn Исполнитель
         a(href="/task/add").btn.btn-default.navbar-btn Заказчик
-        p.navbar-text.navbar-right Добро пожаловать, #{user.name}!
+        button.btn.btn-sm.btn-default.navbar-btn.navbar-right(id="logout") Выйти
+        p.navbar-text.navbar-right(id='#{user._id}') Добро пожаловать, #{user.name}!
+
+
 
 
 
