К заданию добавлено поле статуса

--- a/public/sass/request.sass
+++ b/public/sass/request.sass
@@ -1,6 +1,10 @@
 @import "settings"
+.request_status
+  border-bottom: 1px solid #fff
+  margin-bottom: 10px
+  font-size: 15px
+  text-transform: uppercase
 .request
-  height: 40px
   position: relative
   margin-bottom: 20px
   span
