--- a/views/includes/executer_menu.jade
+++ b/views/includes/executer_menu.jade
@@ -1,3 +1,3 @@
 ul.customer_menu
     li: a(href='/task/get') Задания
-    li: a(href='/request/get') Заявки
+    li: a(href='/request/getown') Мои заявки
