--- a/views/includes/request.jade
+++ b/views/includes/request.jade
@@ -1,7 +1,9 @@
 .request
     include request_header
     .authors
-        .author(ng-repeat="author in request.requests") {{author.executer.name}}
-            i(data-toggle="tooltip" data-placement="right" title="" data-original-title="Tooltip on right").fa.fa-plus-square
-            i(data-toggle="tooltip" data-placement="right" title="" data-original-title="Tooltip on right").fa.fa-minus-square
+        .author(ng-repeat="req in request.requests") {{req.executer.name}}
+            i(data-toggle="tooltip" data-placement="right" title="" data-original-title="Tooltip on right",
+            ng-click="AcceptRequest(req._id, request.task._id)").fa.fa-plus-square
+            i(data-toggle="tooltip" data-placement="right" title="" data-original-title="Tooltip on right",
+            ng-click="RefuseRequest(req._id, request.task._id)").fa.fa-minus-square
 
