Добавлена возможность просмотра профиля пользователя

--- a/public/sass/request.sass
+++ b/public/sass/request.sass
@@ -30,6 +30,10 @@
   display: block
   background-color: $bgclight
   border-bottom: 1px solid black
+  color: #fff
+  &:hover
+    color: #ffffff
+    text-decoration: none
   &:last-child
     border-bottom: none
   i
