--- a/views/includes/navbar.jade
+++ b/views/includes/navbar.jade
@@ -5,7 +5,8 @@ nav.navbar.navbar-default.navbar-fixed-top
         a(href="/task/get").btn.btn-default.navbar-btn.role Исполнитель
         a(href="/task/add").btn.btn-default.navbar-btn.role Заказчик
         button.btn.btn-sm.btn-default.navbar-btn.navbar-right(id="logout") Выйти
-        p.navbar-text.navbar-right(id='#{user._id}') Добро пожаловать, #{user.name}!
+        p.navbar-text.navbar-right(id='#{user._id}') Добро пожаловать,
+            a(href='#{user._id}') #{user.name}
 
 
 
