--- a/public/sass/request.sass
+++ b/public/sass/request.sass
@@ -10,35 +10,36 @@
   span
     line-height: 40px
     padding-left: 20px
-  i
+  .icon_set
     position: absolute
-    right: 10px
-    top: 7px
-    font-size: 24px
-    cursor: pointer
-.header
-  background-color: $green
+    right: 0
+    display: inline-block
+    padding-top: 2px
+    i
+      font-size: 24px
+      cursor: pointer
+      margin: 0 5px
+  .header
+    background-color: $green
+    position: relative
+    .icon_set
+      padding-top: 7px
+      padding-right: 10px
 
-.author
-  width: 50%
-  height: 30px
-  border-top: none
-  line-height: 30px
-  cursor: pointer
-  position: relative
-  padding-left: 10px
-  display: block
-  background-color: $bgclight
-  border-bottom: 1px solid black
-  color: #fff
-  &:hover
-    color: #ffffff
-    text-decoration: none
-  &:last-child
-    border-bottom: none
-  i
-    position: absolute
-    top: 3px
-  i.fa-plus-square
-    position: absolute
-    right: 40px
+  .author
+    width: 50%
+    height: 30px
+    border-top: none
+    line-height: 30px
+    cursor: pointer
+    position: relative
+    padding-left: 10px
+    display: block
+    background-color: $bgclight
+    border-bottom: 1px solid black
+    color: #fff
+    &:hover
+      color: #ffffff
+      text-decoration: none
+    &:last-child
+      border-bottom: none
