Добавлена страница просмотра резултата работы исполнителя

--- a/views/includes/request/executer/request_in_work.jade
+++ b/views/includes/request/executer/request_in_work.jade
@@ -2,6 +2,6 @@
     span {{request.task.header}}
     .icon_set
         i.fa.fa-envelope
-        i.fa.fa-check
+        a(href="/request/sendresult/{{request._id}}"): i.fa.fa-check
         i.fa.fa-balance-scale
 
