--- a/views/customer.jade
+++ b/views/customer.jade
@@ -28,7 +28,7 @@ block content
                                     input(type="hidden",name="category_id")
                                     +genGroupField('deadline','Срок сдачи',"")(tag='input',type="datetime")
                                     +genGroupField('files','Прикрепите файлы',"")(tag='input',type="file",other="multiple")
-                                    button.btn.btn-primary.prev Назад
+                                    a.btn.btn-primary.prev Назад
                                     button.btn.btn-primary.continue(type="submit") Продолжить
             include includes/last_tasks
 block additional_scripts
