--- a/views/includes/request/customer/request_search.jade
+++ b/views/includes/request/customer/request_search.jade
@@ -4,7 +4,7 @@
         a.author(ng-repeat="req in request.requests",href='/user/{{req.executer._id}}') {{req.executer.name}}
             .icon_set
                 i(data-toggle="tooltip" data-placement="right" title="" data-original-title="Tooltip on right",
-                ng-click="AcceptRequest(req._id, request.task._id)").fa.fa-plus-square
+                ng-click="AcceptRequest(req._id, request.task._id); $event.stopPropagation();").fa.fa-plus-square
                 i(data-toggle="tooltip" data-placement="right" title="" data-original-title="Tooltip on right",
-                ng-click="RefuseRequest(req._id, request.task._id)").fa.fa-minus-square
+                ng-click="RefuseRequest(req._id, request.task._id); $event.stopPropagation();").fa.fa-minus-square
 
