--- a/views/send_result.jade
+++ b/views/send_result.jade
@@ -1,14 +1,24 @@
 extends layout
 block additional_styles
     link(rel="stylesheet",href="/css/customer.css")
+    link(rel="stylesheet",href="/css/executer.css")
+    link(rel="stylesheet",href="/css/passive_task.css")
 block content
     include includes/navbar
     include mixins/genGroupField
-    .container-fluid(ng-controller="TaskCtrl")
+    .container-fluid
         .row
             include includes/messages
             .col-lg-6
-
+                .row
+                    p Прикрепите необходимые файлы
+                    .div(ng-init="task= #{JSON.stringify(task)}")
+                        include includes/task
+                    form(action="/request/sendresult", method="post", enctype="multipart/form-data")
+                        +genGroupField('message','Сообщение',"")(tag='textarea')
+                        +genGroupField('files','Прикрепите файлы',"")(tag='input',type="file",other="multiple")
+                        input(name='task',value='{{task._id}}',type='hidden')
+                        button.btn.btn-primary.continue(type="submit") Отправить
             include includes/last_tasks
 block additional_scripts
     script(src="/js/controllers/task.js")
