Добавлен редактирование и удаление заданий

--- a/public/sass/executer.sass
+++ b/public/sass/executer.sass
@@ -48,7 +48,7 @@
         margin-right: 10px
 .modal
   .modal-body
-    padding: 0
+    padding: 20px
     textarea
       width: 100%
       resize: none
