--- a/public/sass/request.sass
+++ b/public/sass/request.sass
@@ -43,3 +43,10 @@
       text-decoration: none
     &:last-child
       border-bottom: none
+#dispute
+  textarea
+    width: 100%
+    text-indent: 10px
+    resize: none
+.dispute .header
+  background-color: red
