--- a/views/requests.jade
+++ b/views/requests.jade
@@ -19,7 +19,10 @@ block content
                     div(ng-repeat="request in requests.req_check")
                         include includes/request/customer/request_in_check
                     p.request_status Арбитраж
+                    div(ng-repeat="request in requests.req_dispute")
+                        include includes/request/customer/request_in_dispute
             include includes/last_tasks
+            include includes/dispute
 block additional_scripts
     script(src="/js/controllers/request.js")
 
