--- a/public/sass/request.sass
+++ b/public/sass/request.sass
@@ -1,7 +1,7 @@
 @import "settings"
 .request_status
   border-bottom: 1px solid #fff
-  margin-bottom: 10px
+  margin: 10px 0
   font-size: 15px
   text-transform: uppercase
 .request
@@ -25,16 +25,19 @@
     .icon_set
       padding-top: 7px
       padding-right: 10px
-
+.reqs
+  margin-bottom: 10px
+.authors
+  padding: 0
   .author
-    width: 50%
+    width: 100%
     height: 30px
     border-top: none
     line-height: 30px
     cursor: pointer
     position: relative
     padding-left: 10px
-    display: block
+    display: inline-block
     background-color: $bgclight
     border-bottom: 1px solid black
     color: #fff
