--- a/views/layout.jade
+++ b/views/layout.jade
@@ -14,4 +14,5 @@ html(lang="en",ng-app="app")
             script(src="/libs/bootstrap/bootstrap.js")
             script(src="/libs/angular/angular.js")
             script(src="/js/config.js")
+            script(src="/js/app.js")
         block additional_scripts
