--- a/views/view_result.jade
+++ b/views/view_result.jade
@@ -14,6 +14,7 @@ block content
                     .div(ng-controller="RequestCtrl",ng-init="task= #{JSON.stringify(task)}")
                         include includes/task
                         include includes/dispute
+                        include  includes/comment
                         .alert.alert-dismissible.alert-warning
                             button.close(type='button', data-dismiss='alert') &times;
                             h4 Сообщение от исполнителя об выполнении работы
@@ -24,7 +25,7 @@ block content
                                 i.fa.fa-file-o
                                 a(href="http://localhost:8080/uploads/{{file.name}}") {{file.original}}
                         .button_wrapper
-                            a.btn.btn-success Подтвердить
+                            button.btn.btn-success(ng-click="SendComment()") Подтвердить
                             button.btn.btn-danger#dispute(ng-click="SendDispute(null,task._id)") Арбитраж
 
 
