--- a/views/includes/request/executer/request_search.jade
+++ b/views/includes/request/executer/request_search.jade
@@ -1,4 +1,6 @@
 .header
     span {{request.task.header}}
     .icon_set
-        i.fa.fa-envelope
+        i.fa.fa-envelope(ng-click="showChat($event, request.task._id)")
+div
+include ../../chat
