--- a/views/includes/request/customer/request_in_check.jade
+++ b/views/includes/request/customer/request_in_check.jade
@@ -3,3 +3,4 @@
     .authors
         .author(ng-repeat="req in request.requests") {{req.executer.name}}
             a(style="float: right", href="/task/viewresult/{{req.task}}").btn.btn-danger.btn-sm Просмотреть результат
+    include ../../chat
