--- a/views/includes/request/executer/request_in_check.jade
+++ b/views/includes/request/executer/request_in_check.jade
@@ -1,4 +1,5 @@
 .header
     span {{request.task.header}}
     .icon_set
-        i.fa.fa-envelope
+        i.fa.fa-envelope(ng-click="showChat($event, request.task._id)")
+include ../../chat
