--- a/views/includes/request/executer/request_in_work.jade
+++ b/views/includes/request/executer/request_in_work.jade
@@ -1,7 +1,8 @@
 .header
     span {{request.task.header}}
     .icon_set
-        i.fa.fa-envelope
+        i.fa.fa-envelope(ng-click="showChat($event, request.task._id)")
         a(href="/request/sendresult/{{request._id}}"): i.fa.fa-check
         i.fa.fa-balance-scale
+include ../../chat
 
