--- a/public/sass/admin.sass
+++ b/public/sass/admin.sass
@@ -1,3 +1,6 @@
-.users p
-  text-transform: uppercase
-  border-bottom: 1px solid #fff
+.users
+  p
+    text-transform: uppercase
+    border-bottom: 1px solid #fff
+  select
+    color: #000000
